# openapi3

./: openapi3.cabal  openapi4.cabal
src/: EmptyModule.hs  Main.hs
src/Data/: OpenApi.hs  UsesList.hs
src/Data/OpenApi/: Declare.hs  Internal.hs  Lens.hs  Operation.hs
src/Data/OpenApi/Aeson/: Compat.hs
src/Data/OpenApi/Internal/: Schema.hs  Utils.hs
src/Data/OpenApi/Internal/Schema/: Validation.hs
src/Data/OpenApi/Schema/: Generator.hs  Validation.hs
