cabal-version:       3.4
name:                openapi3
version:             3.2.2

synopsis:            OpenAPI 3.0 data model
category:            Web, Swagger, OpenApi
description:
  This library is intended to be used for decoding and encoding OpenAPI 3.0 API
  specifications as well as manipulating them.
  .
  The original OpenAPI 3.0 specification is available at http://swagger.io/specification/.

homepage:            https://github.com/biocad/openapi3
bug-reports:         https://github.com/biocad/openapi3/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Nickolay Kudasov, Maxim Koltsov
maintainer:          nickolay@getshoptv.com, kolmax94@gmail.com
copyright:           (c) 2015-2016, GetShopTV, (c) 2020, Biocad
build-type:          Custom
extra-source-files:
    README.md
  , CHANGELOG.md
  , examples/*.hs
tested-with:
  GHC ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.2

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest >=1.0.6 && <1.1

library
  hs-source-dirs:      src
  exposed-modules:
    Data.OpenApi
    Data.OpenApi.Internal.Schema.Validation
    Data.OpenApi.Schema.Validation

  -- GHC boot libraries
  build-depends:
      base             >=4.11.1.0  && <4.18

  default-language:    Haskell2010

test-suite doctests
  -- See QuickCheck note in https://github.com/phadej/cabal-doctest#notes
  build-depends:    base, doctest, Glob, QuickCheck, openapi3
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          doctests.hs
  type:             exitcode-stdio-1.0
