cabal-version:       3.4
name:                openapi4
version:             3.2.2
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules:
    Data.OpenApi
    Data.OpenApi.Internal.Schema.Validation
    Data.OpenApi.Schema.Validation
  build-depends: base
  default-language: Haskell2010
