cabal-version: 3.4
name:          openapi4
version:       3.2.2
build-type:    Simple

library
    exposed-modules:
        Data.OpenApi
        Data.OpenApi.Internal.Schema.Validation
        Data.OpenApi.Schema.Validation

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base
